# CloudCompare_plugin

./: README.md
ExamplePlugin/: CMakeLists.txt  ExamplePlugin.qrc  info.json
ExamplePlugin/include/: CMakeLists.txt  ExampleDlg.h  ExamplePlugin.h
ExamplePlugin/src/: CMakeLists.txt  ExampleDlg.cpp  ExamplePlugin.cpp
ExamplePlugin/ui/: CMakeLists.txt  dialog.ui
